git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@88 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -12,7 +12,7 @@
   <location path="ContentEdit.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, ContentEdit, Content" />
+        <allow roles="admin, all, ContentEdit, Content" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -21,7 +21,7 @@
   <location path="Structure.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, Structure" />
+        <allow roles="admin, all, Structure" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -30,7 +30,7 @@
   <location path="Publish.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, Publish" />
+        <allow roles="admin, all, Publish" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -39,7 +39,7 @@
   <location path="Scaffold.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, Scaffold" />
+        <allow roles="admin, all, Scaffold" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -48,7 +48,7 @@
   <location path="Forms.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, Forms" />
+        <allow roles="admin, all, Forms" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -57,7 +57,7 @@
   <location path="Articles.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, Articles" />
+        <allow roles="admin, all, Articles" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -66,7 +66,7 @@
   <location path="SubscriptionManager.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, subscriptions" />
+        <allow roles="admin, all, subscriptions" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -75,7 +75,7 @@
   <location path="dictionary.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, dictionary" />
+        <allow roles="admin, all, dictionary" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -84,7 +84,7 @@
   <location path="FileManager.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, FileManager" />
+        <allow roles="admin, all, FileManager" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -93,7 +93,7 @@
   <location path="FileManager2.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, FileManager" />
+        <allow roles="admin, all, FileManager" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -102,7 +102,7 @@
   <location path="Editor.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, admin" />
+        <allow roles="admin, all, admin" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -111,7 +111,7 @@
   <location path="External.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, external" />
+        <allow roles="admin, all, external" />
         <deny users="*" />
       </authorization>
     </system.web>
