removed 2col shit
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@89 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -34,23 +34,24 @@
     <add key="CacheDuration" value="3600" />
   </appSettings>
   <connectionStrings>
-    <!-- add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama;Pooling=true;" / -->
-    <add name="MsSqlConnectionString" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz;Pooling=true;" />
-    <add name="MsSqlConnectionString13" connectionString=";" />
-    <add name="MsSqlConnectionStringCustom" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;" />
-    <add name="ProfileSqlConnectionString" connectionString="server=KIT.renderspace.si;uid=auth;pwd=auth;database=AuthManager;Pooling=true;" />
-    <add name="MsSqlConnectionStringCrawler" connectionString="server=KIT.renderspace.si;uid=crawler;pwd=crawler;database=Crawler;Pooling=true;" />
-    <add name="Bamboo" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;" />
+<add name="MsSqlConnectionString" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz;Pooling=true;" />
+		<add name="Bamboo" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />
+		<add name="MsSqlConnectionString13" connectionString=";Pooling=true;" />
+		<add name="MsSqlConnectionStringCustom" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz-custom;Pooling=true;" />
 
-    <!-- Baza ZRSZ_JobVacancy -->
-    <add name="eSvetovanje.Entities.Properties.Settings.ZRSZ_KorpoWebConnectionString" connectionString="Data Source=localhost;Initial Catalog=KorpoWeb;Persist Security Info=True;User Id=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
-    <add name="eSvetovanje.Entities.Properties.Settings.ZRSZ_JobVacancyConnectionString" connectionString="Data Source=localhost;Initial Catalog=zrsz-JobVacancy;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
-    <!-- Glavna baza aplikacije eSvetovanje -->
-    <add name="eSvetovanje.Entities.Properties.Settings.eSvetovanjeConnectionString" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-eSvetovanje2;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
-    <!-- KorpoWeb -->
-    <add name="eSvetovanje.Entities.Properties.Settings.ESSConnectionString" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-SkupnaBaza;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient"/>
-    <!--<add name="eSvetovanje.Entities.Properties.Settings.ESSConnectionString" connectionString="user id=wds_test;password=wds_test_1234*;data source=cswebrazvoj;initial catalog=SkupnaBaza;packet size=4096" providerName="System.Data.SqlClient"/>-->
-    <add name="eSvetovanje.Kontakti" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-Kontakti;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient"/>
+		<add name="ProfileSqlConnectionString" connectionString="server=tartar.netinet.si;uid=auth;pwd=auth;database=AuthManager;Pooling=true;"/>		
+		
+		
+		<add name="MsSqlConnectionStringCrawler" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=Crawler;Pooling=true;" />
+		<!-- Baza ZRSZ_JobVacancy -->
+		<add name="eSvetovanje.Entities.Properties.Settings.ZRSZ_KorpoWebConnectionString" connectionString="Data Source=tartar.netinet.si;Initial Catalog=KorpoWeb;Persist Security Info=True;User Id=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
+		<add name="eSvetovanje.Entities.Properties.Settings.ZRSZ_JobVacancyConnectionString" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-JobVacancy;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
+		<!-- Glavna baza aplikacije eSvetovanje -->
+		<add name="eSvetovanje.Entities.Properties.Settings.eSvetovanjeConnectionString" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-eSvetovanje2;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
+		<!-- KorpoWeb -->
+		<add name="eSvetovanje.Entities.Properties.Settings.ESSConnectionString" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-SkupnaBaza;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient"/>
+		<!--<add name="eSvetovanje.Entities.Properties.Settings.ESSConnectionString" connectionString="user id=wds_test;password=wds_test_1234*;data source=cswebrazvoj;initial catalog=SkupnaBaza;packet size=4096" providerName="System.Data.SqlClient"/>-->
+		<add name="eSvetovanje.Kontakti" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-Kontakti;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <globalization uiCulture="sl-SI" culture="sl-SI" />
