--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -27,8 +27,6 @@
   </urlrewritingnet>
   <appSettings>
     <add key="WebSiteId" value="7" />
-    <add key="PreferredCulture" value="sl-SI" />
-    <add key="PreferredUICulture" value="sl-SI" />
     <add key="PublishRoleMapping" value="publisher" />
     <add key="PublishFlag" value="false" />
     <add key="CacheDuration" value="3600" />
@@ -54,14 +52,8 @@
 		<add name="eSvetovanje.Kontakti" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-Kontakti;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
-    <globalization uiCulture="sl-SI" culture="sl-SI" />
-    <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
-      <controls>
-        <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      </controls>
-    </pages>
-
-
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="sl-SI" culture="sl-SI" />
+    <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"></pages>
 
     <sessionState timeout="60" />
     <httpRuntime maxRequestLength="12288" requestValidationMode="2.0" />
