--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -7,30 +7,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <sectionGroup name="fiftyOne">
-      <section name="log"
-					  type="FiftyOne.Foundation.Mobile.Configuration.LogSection, FiftyOne.Foundation"
-					  requirePermission="false"
-					  allowDefinition="Everywhere"
-					  restartOnExternalChanges="false"
-					  allowExeDefinition="MachineToApplication"/>
-      <section name="redirect"
-					  type="FiftyOne.Foundation.Mobile.Configuration.RedirectSection, FiftyOne.Foundation"
-					  requirePermission="false"
-					  allowDefinition="Everywhere"
-					  restartOnExternalChanges="false"
-					  allowExeDefinition="MachineToApplication"/>
-      <section name="detection"
-					  type="FiftyOne.Foundation.Mobile.Detection.Configuration.DetectionSection, FiftyOne.Foundation"
-					  requirePermission="false"
-					  allowDefinition="Everywhere"
-					  restartOnExternalChanges="false"
-					  allowExeDefinition="MachineToApplication"/>
-      <section name="imageOptimisation"
-					  type="FiftyOne.Foundation.Mobile.Configuration.ImageOptimisationSection, FiftyOne.Foundation"
-					  requirePermission="false"
-					  allowDefinition="Everywhere"
-					  restartOnExternalChanges="false"
-					  allowExeDefinition="MachineToApplication"/>
+      <section name="log" type="FiftyOne.Foundation.Mobile.Configuration.LogSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
+      <section name="redirect" type="FiftyOne.Foundation.Mobile.Configuration.RedirectSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
+      <section name="detection" type="FiftyOne.Foundation.Mobile.Detection.Configuration.DetectionSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
+      <section name="imageOptimisation" type="FiftyOne.Foundation.Mobile.Configuration.ImageOptimisationSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
     </sectionGroup>
   </configSections>
   <rssConfiguration>
@@ -87,12 +67,9 @@
     <add name="eSvetovanje.Kontakti" connectionString="Data Source=tartar.netinet.si;Initial Catalog=zrsz-Kontakti;Persist Security Info=True;User ID=zrsz;Password=zrsz" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <fiftyOne>
-    <redirect firstRequestOnly="true" mobileHomePageUrl="http://zrszm.t.renderspace.net"
-     timeout="20"
-     devicesFile="~/App_Data/Devices.dat"
-     mobilePagesRegex="/(Mobile)/">
+    <redirect firstRequestOnly="true" mobileHomePageUrl="http://zrszm.t.renderspace.net" timeout="20" devicesFile="~/App_Data/Devices.dat" mobilePagesRegex="/(Mobile)/">
     </redirect>
-    <log logFile="~/App_Data/Log.txt" logLevel="Info"/>
+    <log logFile="~/App_Data/Log.txt" logLevel="Info" />
     <detection binaryFilePath="~/App_Data/51Degrees.dat" />
   </fiftyOne>
   <system.web>
