--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -25,7 +25,7 @@
     <rewrites>
       <add name="backslashRedir" provider="RegEx" virtualUrl="~/(.*)/$" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/$1" redirect="Application" ignoreCase="true" />
       <add name="svetavladarRedir" provider="RegEx" virtualUrl="^/(?!_files)(_.*)+" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/$1" redirect="None" ignoreCase="true" />
-      <add name="AdminRedir" provider="RegEx" virtualUrl="^/adm" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/adm/structure.aspx" redirect="None" ignoreCase="true" />
+      <!-- add name="AdminRedir" provider="RegEx" virtualUrl="^/adm" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/adm/structure.aspx" redirect="None" ignoreCase="true" / -->
       <add name="robotsRedir" provider="RegEx" virtualUrl="^/robots.txt" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/robots.txt" redirect="None" ignoreCase="true" />
       <add name="favicoRedir" provider="RegEx" virtualUrl="^/favicon.ico" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/favicon.ico" redirect="None" ignoreCase="true" />
       <add name="MainRedirect" provider="TURLProvider"></add>
@@ -94,7 +94,9 @@
         <add assembly="System.Design, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
       </assemblies>
     </compilation>
-    <authentication mode="None" />
+    <authentication mode="None">
+      <forms loginUrl="/Account/Login.aspx" />
+    </authentication>
     
     <!--
     <authentication mode="Forms" />
@@ -112,8 +114,7 @@
         <clear />
         <add name="SqlRoleManager" type="System.Web.Security.SqlRoleProvider" connectionStringName="DefaultConnection" applicationName="OneNet" />
       </providers>
-    </roleManager>-->
-    <profile enabled="true">
+    </roleManager><profile enabled="true">
       <providers>
         <clear />
         <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" applicationName="/" connectionStringName="DefaultConnection" />
@@ -137,8 +138,9 @@
         <add name="SurName" type="String" allowAnonymous="false" />
         <add name="Email" type="String" allowAnonymous="false" />
       </properties>
-    </profile>
-    <siteMap enabled="true" defaultProvider="OneSiteMapProvider">
+    </profile>-->
+
+      <siteMap enabled="true" defaultProvider="OneSiteMapProvider">
       <providers>
         <clear />
         <add name="AspNetXmlSiteMapProvider" siteMapFile="Web.sitemap" securityTrimmingEnabled="true" type="System.Web.XmlSiteMapProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -169,6 +171,22 @@
       <add path="*.jpg" name="jpg2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
       <add path="*.jpeg" name="jpeg2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
       <add path="*.ico" name="ico2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
+      <add path="*.bmp" name="bmp" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+
+      <add path="*.page" name="page" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.flo" name="flo" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.pdf" name="pdf" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.xls" name="xls" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.xlsx" name="xlsx" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.mp3" name="mp3" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.doc" name="doc" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.docx" name="docx" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.pps" name="pps" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.ppt" name="ppt" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.pptx" name="pptx" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.zip" name="zip" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.ai" name="ai" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
+      <add path="*.swf" name="swf" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler"/>
     </handlers>
   </system.webServer>
   <system.net>
@@ -182,6 +200,9 @@
     <services>
       <service name="One.Net.BLL.Service.FormService" behaviorConfiguration="myBehavior">
         <endpoint address="" binding="webHttpBinding" contract="One.Net.BLL.Service.IFormService" />
+      </service>
+      <service name="One.Net.BLL.Service.AdminService" behaviorConfiguration="myBehavior">
+        <endpoint address="" binding="webHttpBinding" contract="One.Net.BLL.Service.IAdminService" />
       </service>
     </services>
     <behaviors>
