--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -387,10 +387,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Mobile\Default.aspx.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="OneMain.Master.cs">
       <DependentUpon>OneMain.Master</DependentUpon>
@@ -505,7 +501,6 @@
     <Content Include="JavaScript\default_custom_ckeditor.js" />
     <Content Include="JavaScript\jquery.details.js" />
     <Content Include="JavaScript\jquery.ui.datepicker-sl.js" />
-    <Content Include="Mobile\Default.aspx" />
     <Content Include="OneMain.Master" />
   </ItemGroup>
   <ItemGroup>
@@ -811,6 +806,9 @@
     </Content>
     <Content Include="adm\fonts\glyphicons-halflings-regular.woff">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="adm\css\web.config">
+      <SubType>Designer</SubType>
     </Content>
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Res\one-net-logo-vs.png" />
